# helloworld

./: .gitignore  Hacktoberfest_2020.md  HelloGit.md  README.md  commit  demo.txt  example.txt  extra_feeds.conf  temp  test.js
.github/: copilot-instructions.md  pull.yml
.github/diy/: 10_system.js  Lean.config  Lienol.config  ctc_23.05.config  default-settings  main.sh  nanopi-r2s.config  zzz-default-settings
.github/diy/patches/: aria2.patch  autocore.patch  automount.patch  autoreboot.patch  cpufreq.patch  ddns.patch  depends.patch  disable_network_rollback.patch  dispatcher.patch  fix-apply.patch  kodbox.patch  luci-app-advanced.patch  luci-app-attendedsysupgrade.patch  luci-app-cifs-mount.patch  luci-app-nginx-manager.patch  luci-app-passwall.patch  luci-app-store.patch  luci-app-turboacc.patch  luci-base.patch  mosdns.patch  mtwifi.patch.b  nginx_luci.patch  syncdial.patch  tencentddns.patch  vssr.patch  wireless.patch
.github/workflows/: Auto-Update-Packages.yml  Start build ssrp 2 platform.yml  aarch64_cortex-a53-build.yml  aarch64_generic.yml  build-auto_synchronize_fork.yml  ci.yml  greetings.yml  main.yml  maintest.yml  multi-arch-test-build.yml  my_build.yml  ssrplus-build-test.yml  ssrplus-build.yml  stale.yml  sync-packages-test.yml  wall-test.yml  wkbuild.yml  zy-build.yml
.github/workflows/diy/: Modify.sh  banner  ctc_18.06.config  customize.sh  index_x86.htm  main.sh  (+2 more)
.github/工作流程/: merge-upstream.yml
chinadns-ng/: Makefile
dns2socks/: Makefile
dns2socks-rust/: Makefile
dns2tcp/: Makefile
dnsproxy/: Makefile
gn/: Makefile
gn/patches/: 010-gcc.patch
hysteria/: Makefile
ipt2socks/: Makefile
lua-neturl/: Makefile
luci-app-ssr-plus/: Makefile
microsocks/: Makefile
mosdns/: Makefile
mosdns/files/: config.yaml
mosdns/patches/: 203-add-response-for-bad-request-in-ServeHTTP-handler.patch  204-black_hole-apply-Fisher-Yates-shuffle-algorithm-to-r.patch  205-format-logtime.patch
naiveproxy/: Makefile
naiveproxy/patches/: 001-Remove-concurrency-limit.patch  100-macros.patch
naiveproxy/src/: init_env.sh
redsocks2/: Makefile
sagernet-core/: Makefile
shadow-tls/: Makefile
shadow-tls/patches/: 010-Fix-reading-WildcardSNI-from-sip003_arg-115.patch  011-fix-use-tls1-2-only-website-for-tls12-test-suites-129.patch  100-update-monoio.patch
shadowsocks-libev/: Makefile
shadowsocks-libev/patches/: 101-Fix-mishandling-of-incoming-socket-buffer.-It-must-b.patch  101-fix-mbedtls3.6-build.patch  102-Fix-in-mbedtls-3.6.0-ver-compilation-failure-issue.patch  102-deprecate-load16-be-replace-with-ntohs.patch
shadowsocks-rust/: Makefile
shadowsocksr-libev/: Makefile
shadowsocksr-libev/patches/: 0001-Add-ss-server-and-ss-check.patch  101-Fix-Werror-sizeof-pointer-memaccess.patch  104-fix-use-after-free.patch  104-pointer-used-after-free.patch  105-Upgrade-PCRE-to-PCRE2.patch
shadowsocksr-libev/src/: CMakeLists.txt  Makefile.am  Makefile.in  README.md  aclocal.m4  config.h.in  configure  configure.ac  shadowsocks-libev.pc.in
shadowsocksr-libev/src/completions/bash/: ss-local  ss-manager  ss-redir  ss-server  ss-tunnel
shadowsocksr-libev/src/debian/: README.Debian  changelog  config.json  control  copyright  rules  shadowsocks-libev.default  shadowsocks-libev.docs  shadowsocks-libev.init  shadowsocks-libev.postinst  shadowsocks-libev.service  source.lintian-overrides  watch
shadowsocksr-libev/src/doc/: Makefile.am  Makefile.in  shadowsocks-libev.asciidoc  ss-local.asciidoc  ss-manager.asciidoc  ss-redir.asciidoc  ss-server.asciidoc  ss-tunnel.asciidoc
shadowsocksr-libev/src/docker/alpine/: Dockerfile  README.md
shadowsocksr-libev/src/docker/ubuntu/: Dockerfile
shadowsocksr-libev/src/libsodium/: .gitignore  CMakeLists.txt  Makefile.am  Makefile.in  configure  configure.ac  libsodium.vcxproj  libsodium.vcxproj.filters
shadowsocksr-libev/src/libsodium/src/: Makefile.in
shadowsocksr-libev/src/libsodium/src/libsodium/: Makefile.am  Makefile.in
shadowsocksr-libev/src/libsodium/src/libsodium/include/: Makefile.am  Makefile.in
shadowsocksr-libev/src/libsodium/test/: HAVE_AMD64_ASM.c  HAVE_CPUID.c  HAVE_TI_MODE.c  HAVE_WEAK_SYMBOLS.c  IS_STDC_LIMIT_MACROS_NEEDED.c
shadowsocksr-libev/src/libsodium/test/default/: CMakeLists.txt
shadowsocksr-libev/src/m4/: ax_pthread.m4  mbedtls.m4  openssl.m4  polarssl.m4  zlib.m4
shadowsocksr-libev/src/rpm/: genrpm.sh
shadowsocksr-libev/src/rpm/SPECS/: shadowsocks-libev.spec.in
shadowsocksr-libev/src/server/: Makefile.in  rule.c  rule.h
shadowsocksr-libev/src/src/: CMakeLists.txt  Makefile.am  Makefile.in  common.h  encrypt.h  jconf.h  local.c  local.h  manager.c  manager.h  redir.c  redir.h  server.c  server.h  shadowsocks.h  socks5.h  ss-nat  tunnel.c  tunnel.h  udprelay.c  udprelay.h  utils.c  utils.h
shadowsocksr-libev/src/src/obfs/: auth.c  auth.h  auth_chain.c  auth_chain.h  base64.h  crc32.c  crc32.h  http_simple.h  obfs.c  obfs.h  obfsutil.h  tls1.2_ticket.c  tls1.2_ticket.h  verify.c  verify.h
simple-obfs/: Makefile
tcping/: Makefile  index.html
tcping/src/: Makefile  main.c  readme.txt  tcp.c  tcp.h
trojan/: Makefile  boost-version.mk
trojan-go/: Makefile
trojan/patches/: 002-Fix-boost1.89-build.patch
tuic/: Makefile
tuic-client/: Makefile
tuic-client/patches/: 001-Fix-rust-stable-build.patch
v2ray-core/: Makefile
v2ray-core/patches/: 010-Chore-use-Go-v1.18-update-dependencies.patch  020-Feat-use-different-qtls-modules-for-different-Go-version.patch
v2ray-geodata/: Makefile
v2ray-plugin/: Makefile
v2raya/: Makefile
v2raya/patches/: 013-fix-we-should-skip-interface-ppp-to-avoid-to-break-net.patch  020-fix-when-no-addr-found-lookup-again.patch  030-fix-incorrect-ipv6-routing.patch  040-fix-a-problem-that-REDIRECT-must-work-with-port-sharing-f.patch  100-compat-v5.patch
xray/: Makefile
xray-core/: Makefile
xray-core/patches/: 010-Use-go-linkname-in-qtls_go118-go.patch  010-go1.21.patch
xray-plugin/: Makefile
xray-plugin/patches/: 0001-fix-go-1.21-build-error.patch  010-go1.21.patch  010-xray-core-Use-go-linkname-in-qtls_go118-go.patch
(+106 files in other folders)
